--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,23 +8,7 @@ layout: default
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="textblock">
-            <h2 class="paragraph-title">{{ site.data.about.[page.lang].title-1 }}</h2>
-            <p class=first-p>{{ site.data.about.[page.lang].text-1 }}</p>
-          </div>
-
-          <div class="textblock">
-            <h2 class="paragraph-title">{{ site.data.about.[page.lang].title-2 }}</h2>
-            <p class=first-p>{{ site.data.about.[page.lang].text-2 }}</p>
-          </div>
-
-          <div class="textblock">
-            <h2 class="paragraph-title">{{ site.data.about.[page.lang].title-3 }}</h2>
-            <p class=first-p>{{ site.data.about.[page.lang].text-3 }}</p>
-          </div>
-
-          <div class="textblock">
-            <h2 class="paragraph-title">{{ site.data.about.[page.lang].title-4 }}</h2>
-            <p class=first-p>{{ site.data.about.[page.lang].text-4 }}</p>
+            {{ content }}
           </div>
         </div>
       </div>
