--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -19,7 +19,7 @@ layout: default
                   <div class="card-icons">
                     {% for icon in post.icons %}
 
-                    <span class="icon icon-1 icon-{{ post.icon }}" data-toggle="tooltip" data-placement="bottom" title="{{ post.icon }}"></span>
+                    <span class="icon js-tooltip-icon icon--{{ post.icon }}" data-toggle="tooltip" data-placement="bottom" title="{{ post.icon }}"></span>
 
                     {% endfor %}
                   </div>
