removed bootstrap and fixed header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer class="main-footer">
-    <a class="brand" href="{{ site.url }}" title="{{ site.data.strings.title }}"><img class="inject-these-svgs" src="{{ site.imgurl }}/brand.svg"></a>
+<footer class="footer">
+    <a class="footer__brand" href="{{ site.url }}" title="{{ site.data.strings.title }}">
+      <img class="inject-these-svgs" src="{{ site.imgurl }}/brand.svg">
+    </a>
 </footer>
