--- a/_sass/modules/_general.scss
+++ b/_sass/modules/_general.scss
@@ -1,6 +1,8 @@
 html {
     position: relative;
     min-height: 100%;
+
+    * { box-sizing: border-box; }
 }
 
 .container-big { @extend .container; }
