--- a/_sass/modules/_typography.scss
+++ b/_sass/modules/_typography.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    transition: 0.25s;
+    text-decoration: none;
 
     &:hover { text-decoration: none; }
 }
@@ -35,6 +35,7 @@ a {
 // --------------------------------------------------
 .textblock {
     font-size: 20px;
+    font-family: $font-family-sans-serif;
 
     margin: 0 0 50px;
 
