--- a/css/main.scss
+++ b/css/main.scss
@@ -20,10 +20,13 @@
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/print";
 
 // Core CSS
+@import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
+
+/* // Core CSS
+
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/scaffolding";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/type";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/code";
-@import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/forms";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/buttons";
@@ -60,7 +63,7 @@
 // Utility classes
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/utilities";
 @import "../public/bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-utilities";
-// endbower
+// endbower */
 
 @import "modules/general",
         "modules/icons",
@@ -72,6 +75,7 @@
         "modules/images";
 
 @import "partials/home",
-        "partials/header-footer",
+        "partials/header",
+        "partials/footer",
         "partials/projects",
         "partials/pages";
