changed default structure

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    <section class="front-page">
+    <section class="section section--{{ page.title | slugify }}">
       <div class="page-wrapper">
         <div class="container">
           <a href="{{ site.data.navigation.[page.lang].home.url }}" class="brand-frame"><img class="inject-these-svgs" src="{{ site.imgurl }}/brand.svg"></a>
