--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,12 @@
 
     {% include header.html %}
 
-    <div class="js-page-wrapper page-wrapper">
+    <div class="js-page-wrapper page-wrapper page-wrapper--{{ page.title | slugify }}">
+      <section  class="section section--{{ page.title | slugify }}">
 
       {{ content }}
 
+      </section>
     </div>
 
     {% include footer.html %}
