--- a/_sass/partials/_pages.scss
+++ b/_sass/partials/_pages.scss
@@ -55,4 +55,37 @@
 	margin: 0 auto 30px;
 }
 
-address h2 { margin: 0; }
+.address {
+	&__list {
+		text-align: center;
+		list-style-type: none;
+
+		padding: 0;
+	}
+
+	&__item {
+		margin: 0 0 25px;
+	}
+
+	&__title {
+		font-style: normal;
+
+		margin: 0 0 5px;
+
+		color: $c-black;
+	}
+
+	&__text {
+		font-style: normal;
+
+		margin: 0;
+
+		color: $c-gray-d3;
+
+		&--link {
+			transition: ease 0.25s;
+
+			&:hover { color: $c-yellow; }
+		}
+	}
+}
