--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,6 @@
 
 @import "modules/general",
         "modules/icons",
-        "modules/layout",
         "modules/forms",
         "modules/cards",
         "modules/posts",
@@ -77,4 +76,5 @@
         "partials/header",
         "partials/footer",
         "partials/projects",
+        "partials/contact",
         "partials/pages";
