structured blog page

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,7 +13,7 @@ layout: default
       <a href="{{ post.url }}" class="post-stub__capsule">
         <div class="post-stub__thumb">{{ post.thumb }}</div>
 
-        <div class="post-stub__description"></div>
+        <div class="post-stub__description">
           <h5 class="post-stub__title">{{ post.title }}</h5>
           <p class="post-stub__subtitle">{{ post.subtitle }}</p>
         </div>
