--- a/css/main.scss
+++ b/css/main.scss
@@ -68,13 +68,13 @@
         "modules/icons",
         "modules/forms",
         "modules/cards",
-        "modules/posts",
         "modules/typography",
         "modules/images";
 
 @import "partials/home",
         "partials/header",
         "partials/footer",
+        "partials/blog",
         "partials/projects",
         "partials/contact",
         "partials/pages";
