--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,13 +8,13 @@ layout: default
     <div class="col-md-10 col-md-offset-1">
 
       <div class="img-full-width">
-        <img src="{{ site.imgurl }}/{{ post.img }}" alt="">
+        <img src="{{ site.imgurl }}/blog/{{ page.img }}" alt="">
       </div>
 
       <div class="textblock">
         <h1 class="headline">
-          {{ post.title }}
-          <small class="subtitle">{{ post.subtitle }}</small>
+          {{ page.title }}
+          <small class="subtitle">{{ page.subtitle }}</small>
         </h1>
 
         {{ content }}
