--- a/_sass/partials/_blog.scss
+++ b/_sass/partials/_blog.scss
@@ -1,7 +1,5 @@
 .posts {
-    &__list {
-
-    }
+    &__list { padding: 0; }
 
     &__item {
         padding: 30px 0;
@@ -45,7 +43,7 @@
         text-transform: uppercase;
         letter-spacing: 0;
 
-        margin: 0 0 5px;
+        margin: 0;
 
         color: $c-black;
         transition: ease 0.25s;
@@ -62,24 +60,28 @@
         transition: ease 0.25s;
     }
 
+    &__thumb-clipper {
+        display: block;
+        float: left;
+        width: 100%;
+        max-height: 128px;
+        margin: 0;
+
+        overflow: hidden;
+    }
+
     &__thumb {
-        img {
-            width: 100%;
-            height: auto;
-        }
+        width: 100%;
+        height: auto;
     }
 
-    &__description {
-        display: inline-block;
-    }
-
+    &__description { display: block; }
 
     &__credits {
         text-align: left;
 
-        display: inline-block;
-        float: left;
-        margin: 0 20px 0 0;
+        display: block;
+        margin: 0 0 5px;
 
     	color: $c-gray-d1;
     	transition: ease 0.25s;
@@ -104,7 +106,11 @@
 
 @media (min-width: $screen-tablet) {
     .post-stub {
-        &__title { font-size: 35px; }
+        &__title {
+            font-size: 35px;
+
+            margin: 0 0 5px;
+        }
 
         &__subtitle {
             font-size: 20px;
@@ -112,13 +118,7 @@
             color: $c-gray-l1;
         }
 
-        &__credits {
-            text-align: right;
-        }
-
-        &__description {
-            padding-left: 0;
-        }
+        &__credits { text-align: right; }
 
         &__text { display: block; }
 
