--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,17 +6,17 @@ layout: default
   <div class="project-cover-info">
     <div class="aligner">
       <div class="front-holder">
-        <img src="{{ site.imgurl}}/{{ page.project-img }}" alt="">
+        <img src="{{ site.imgurl}}/projects/{{ page.project-img }}" alt="">
       </div>
     </div>
   </div>
-  <img src="{{ site.imgurl}}/{{ page.project-thumb }}" alt="">
+  <img src="{{ site.imgurl}}/projects/{{ page.project-thumb }}" alt="">
 </div>
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-3">
 
+    <div class="col-sm-3">
       <div class="tech-specs">
         <h3 class="title">{{ site.data.project.[page.lang].tech-specs }}</h3>
         <h4>{{ site.data.project.[page.lang].project-link }}</h4>
@@ -49,17 +49,21 @@ layout: default
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="col-sm-9">
-        <h1 class="headline">
-          {{ page.title }}
-          <p class="subtitle">{{ page.subtitle }}</p>
-        </h1>
+    <div class="col-sm-9">
+      <h1 class="headline">
+        {{ page.title }}
+        <p class="subtitle">{{ page.subtitle }}</p>
+      </h1>
 
-        <div class="textblock">
-          <p class="first-p">{{ page.intro }}</p>
-        </div>
+      <div class="textblock">
+        <p class="first-p">{{ page.intro }}</p>
+
+        {{ content }}
+
       </div>
     </div>
+
   </div>
 </div>
