--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="container">
   <!-- Projects list -->
-  <ul class="card-list list-unstyled">
+  <ul class="card-list">
     {% assign posts = site.posts | where:"lang", page.lang | where:"category", "project" %}
 
     {% for post in posts %}
@@ -26,7 +26,7 @@ layout: default
 
           <div class="card-bg">
             <span class="card-frame"></span>
-            <img src="{{ post.image }}" alt="">
+            <img src="{{ site.imgurl }}/projects/{{ post.project-img }}" alt="">
           </div>
         </a>
       </li>
